# resolver

./: Cargo.toml  README.md
src/: buffer.rs  content.rs  editor.rs  frame.rs  main.rs  options.rs  rows.rs  text.rs  writer.rs
src/editor/: keys.rs  mod.rs  writer.rs
src/error/: mod.rs
src/rdl/: error.rs  exec.rs  mod.rs  parse.rs  scan.rs  unit.rs
src/text/: action.rs  attrs.rs  layout.rs  mod.rs
src/util/: mod.rs
test/fixture/: 001.res  demo.res
